--- a/nvidia-deepstream/Cargo.toml
+++ b/nvidia-deepstream/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+gstreamer = "0.19.4"
+nvidia-deepstream-sys = { version = "0.1.0", path = "../nvidia-deepstream-sys" }
