--- a/nvidia-deepstream-examples/Cargo.toml
+++ b/nvidia-deepstream-examples/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 
 gstreamer = "0.19.4"
 nvidia-deepstream = { version = "0.1.0", path = "../nvidia-deepstream", features = ["all"] }
+chrono = "0.4.23"
